--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="cards">
                     <div class="card-item">
                         <div class="phopro">
-                            <img src="img/a.PNG" alt="photo">
+                            <img src="/img/c.PNG" alt="photo">
                         </div>
                        <div class="nom">
                         <p>Yvanie Noelle</p>
@@ -32,7 +32,7 @@
                     </div>
                     <div class="card-item">
                         <div class="phopro">
-                            <img src="img/b.PNG" alt="photo">
+                            <img src="/img/a.PNG" alt="photo">
                         </div>
                        <div class="nom">
                         <p>Yvanie Noelle</p>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="card-item">
                         <div class="phopro">
-                            <img src="img/c.PNG" alt="photo">
+                            <img src="/img/b.PNG" alt="photo">
                         </div>
                        <div class="nom">
                         <p>Yvanie Noelle</p> 
